deadblock fix